2004-02-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-exec, installdirs, uninstall): Install
	preloaded_libintl.so only on glibc systems, not on OpenBSD.
	Reported by Han Boetes <han@mijncomputer.nl>.

2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-21  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for MacOS X (Darwin).

2004-01-18  Bruno Haible  <bruno@clisp.org>

	* localename.c (_nl_locale_name): Use two-letter ISO 639 codes for
	Divehi, Fulfulde, Igbo, Kanuri, Venda.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 7:0:4.

2003-12-02  Jakub Jelinek  <jakub@redhat.com>

	* locale.alias: Use nb_NO instead of no_NO for bokmål.

2003-11-03  Ulrich Drepper  <drepper@redhat.com>

	* locale.alias: nb_NO is now the correct name, not no_NO.

2004-01-09  Bruno Haible  <bruno@clisp.org>

	* gmo.h (MO_REVISION_NUMBER_WITH_SYSDEP_I): New definition.
	* loadmsgcat.c (get_sysdep_segment_value): Handle "I".
	(_nl_load_domain): Treat major revision 1 like major revision 0.

2004-01-08  Bruno Haible  <bruno@clisp.org>

	* loadmsgcat.c (_nl_load_domain): When a string pair uses a system
	dependent segment not known to this version of the library, ignore
	the string pair instead of crashing.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 6:1:4.

2003-12-05  Bruno Haible  <bruno@clisp.org>

	* localename.c (_nl_locale_name): Change result for Latin Uzbek locale
	to match the glibc name.

2003-12-02  Bruno Haible  <bruno@clisp.org>

	* localename.c (LANG_AMHARIC, LANG_BURMESE, LANG_CAMBODIAN,
	LANG_CHEROKEE, LANG_EDO, LANG_FRISIAN, LANG_FULFULDE, LANG_GUARANI,
	LANG_HAUSA, LANG_HAWAIIAN, LANG_IBIBIO, LANG_IGBO, LANG_INUKTITUT,